--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.8.0"
   },
   "devDependencies": {
